--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@geoman-io/leaflet-geoman-free": "^2.11.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
     "earcut": "^2.2.3",
@@ -22,7 +23,6 @@
     "leaflet-gesture-handling": "^1.2.2",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
-    "nuxt-i18n": "^6.28.1",
     "slugify": "^1.6.5",
     "vue": "^2.6.14",
     "vue-matomo": "^4.1.0",
@@ -46,6 +46,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1"
