--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/svg": "^0.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
